tests/fixtures/invalid/bool_bitor_bytes.py
# Cannot bitwise OR Bool and Bytes
x: bool = True | b"hello"
